# sim-pca

./: .gitignore  README.md  demo-pytorch.py  pyproject.toml  using-nvbit-trace-simulation.md
scripts/: llm-profiling.ipynb  perf-pca.ipynb
scripts/.ipynb_checkpoints/: perf-pca-checkpoint.ipynb
src/models/: cog-video.py  flux.py  jamba1.5.mini.py  llama70B.py  orca-mini-7b.py  phi2.py  phi3.5.py
src/nvbit/: collect_traces.cu
