[tool.poetry]
name = "sim-pca"
version = "0.1.0"
description = "Comparing simulator benchmarks to modern large language models."
authors = ["wkaisertexas <wkaisertexas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.44.2"
diffusers = "^0.30.1"
huggingface-hub = {extras = ["cli"], version = "^0.24.6"}
vllm = ">0.5.4"
jupyterlab = "^4.2.5"
pandas = "^2.2.2"
torch = "^2.4.0"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
